Package_Tools/include_C/include/SDL3/SDL_iostream.h


typedef struct SDL_IOStream SDL_IOStream;
extern  void *  SDL_LoadFile(const char *file, size_t *datasize);
extern  bool  SDL_ReadU8(SDL_IOStream *src, Uint8 *value);
extern  bool  SDL_ReadU16LE(SDL_IOStream *src, Uint16 *value);
extern  bool  SDL_ReadS16LE(SDL_IOStream *src, Sint16 *value);
extern  bool  SDL_ReadU16BE(SDL_IOStream *src, Uint16 *value);
extern  bool  SDL_ReadS16BE(SDL_IOStream *src, Sint16 *value);
extern  bool  SDL_ReadU32LE(SDL_IOStream *src, Uint32 *value);
extern  bool  SDL_ReadS32LE(SDL_IOStream *src, Sint32 *value);
extern  bool  SDL_ReadU32BE(SDL_IOStream *src, Uint32 *value);
extern  bool  SDL_ReadS32BE(SDL_IOStream *src, Sint32 *value);
extern  bool  SDL_ReadU64LE(SDL_IOStream *src, Uint64 *value);
extern  bool  SDL_ReadS64LE(SDL_IOStream *src, Sint64 *value);
extern  bool  SDL_ReadU64BE(SDL_IOStream *src, Uint64 *value);
extern  bool  SDL_ReadS64BE(SDL_IOStream *src, Sint64 *value);
extern  bool  SDL_WriteU8(SDL_IOStream *dst, Uint8 value);
extern  bool  SDL_WriteU16LE(SDL_IOStream *dst, Uint16 value);
extern  bool  SDL_WriteS16LE(SDL_IOStream *dst, Sint16 value);
extern  bool  SDL_WriteU16BE(SDL_IOStream *dst, Uint16 value);
extern  bool  SDL_WriteS16BE(SDL_IOStream *dst, Sint16 value);
extern  bool  SDL_WriteU32LE(SDL_IOStream *dst, Uint32 value);
extern  bool  SDL_WriteS32LE(SDL_IOStream *dst, Sint32 value);
extern  bool  SDL_WriteU32BE(SDL_IOStream *dst, Uint32 value);
extern  bool  SDL_WriteS32BE(SDL_IOStream *dst, Sint32 value);
extern  bool  SDL_WriteU64LE(SDL_IOStream *dst, Uint64 value);
extern  bool  SDL_WriteS64LE(SDL_IOStream *dst, Sint64 value);
extern  bool  SDL_WriteU64BE(SDL_IOStream *dst, Uint64 value);
extern  bool  SDL_WriteS64BE(SDL_IOStream *dst, Sint64 value);